play/2020-05-08-tree-sitter-rust/corpus/match_bad.txt
========
match_bad
========

match cond {
    p1 => e1
    p2 => e2
    p3 => {}
    p4 => fn() {}
}

--------

(source_file (match_expr (IDENT) (arm_closed (IDENT) (ERROR (IDENT) (IDENT) (IDENT) (IDENT)) (block)) (arm_closed (IDENT) (fn_expr_closed (block)))))
